# itmo-low-level-programming-lab2

./: .gitignore  CMakeLists.txt  README.md  serialization.c  serialization.h  sql_ast.c  sql_ast.h  sql_lexer.l  sql_parser.y
.github/workflows/: build-and-test.yml  format.yml  memory-usage.yml
examples/in/: 10.sql  11.sql  12.sql  13.sql  14.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql
